<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.texas.easilendar.ui.outsides.LoginActivity">

    <TextView
        android:id="@+id/forgotPasswordAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/forgotPasswordInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_instruction"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#fff"
        android:layout_below="@+id/forgotPasswordAppName"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/forgot_password_email_hint"
        android:layout_below="@+id/forgotPasswordInstruction"
        android:singleLine="true"
        android:imeOptions="actionSend"
        style="@style/AppStyle.Input.IconLeft" />

    <ImageView
        android:src="@drawable/ic_email_black_24dp"
        android:layout_alignTop="@+id/forgotPasswordEmail"
        android:layout_alignLeft="@+id/forgotPasswordEmail"
        android:layout_alignStart="@+id/forgotPasswordEmail"
        android:contentDescription="@string/forgot_password_email_hint"
        style="@style/AppStyle.Icon.InputIcon" />

    <Button
        android:id="@+id/forgotPasswordSubmit"
        android:text="@string/btn_reset_password"
        android:layout_below="@+id/forgotPasswordEmail"
        android:layout_marginTop="20dp"
        style="@style/AppStyle.Button" />

    <ProgressBar
        android:id="@+id/forgotPasswordProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordSubmit"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <!-- Link to Login Screen -->
    <Button
        android:id="@+id/forgotPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#22000000"
        android:text="@string/forgot_password_login"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle" />

</RelativeLayout>
